# ElohimOS

./: .gitignore  Cargo.toml  Makefile  OVMF-pure-efi.fd  README.md
src/: driver.rs  lib.rs  main.rs
src/arch/x86_64/: driver.rs  gdt.rs  mod.rs
src/arch/x86_64/bootloader/: Cargo.toml  Makefile
src/arch/x86_64/bootloader/src/: boot.rs  config.rs  info.rs  lib.rs  main.rs  page_table.rs
src/arch/x86_64/driver/: serial.rs
