[package]
name = "elohim"
version = "0.0.0"
edition = "2018"
authors = ["Name1e5s <name1e5s@bupt.edu.cn>"]
description = "A simple OS project."

[dependencies]
x86_64 = "0.7"
bitflags = "1.2.1"
log = "0.4"
bootloader = { path = "./src/arch/x86_64/bootloader" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.5.2"
uefi = "0.3.2"