[package]
name = "bootloader"
version = "0.0.0"
authors = ["name1e5s <name1e5s@bupt.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = "0.3.2"
uefi-services = { git = "https://github.com/rust-osdev/uefi-rs.git", rev = "5d1f121d"}
log = "0.4"
xmas-elf = "0.7"
x86_64 = "0.7"